Fix topic path not being aligned on the right on narrow screen view

--- a/src/TaskContentFancy.module.css
+++ b/src/TaskContentFancy.module.css
@@ -15,6 +15,7 @@
 span.topicPath {
     flex-grow: 1;
     text-align: right;
+    word-wrap: break-word;
 }
 
 /* is contained in button-list */
@@ -173,6 +174,6 @@ span.buttonDuplicate {
 @media (max-width: 800px) {
     .task {
         flex-direction: column;
-        align-items: flex-start;
+        align-items: stretch;
     }
 }
